# meritengine

./: .gitignore  .vercelignore  README.md  demo.py  generate_pdf_shortlist.py  generate_presentation_slides.py  generate_ranked_shortlist.py  idea.md  mass_simulate.py  pyproject.toml  rank.py  ranked_shortlist.csv  ranked_shortlist.json  run_massive_pdf_simulation.py  simulate.py  simulation_results.json  submission_metadata.yaml  team_meritengine.csv  vercel.json
meritengine/: .env.example  __init__.py
meritengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
meritengine/api/: __init__.py  server.py
meritengine/core/: __init__.py  db.py  explain.py  models.py  pipeline.py  router.py
meritengine/core/scoring/: __init__.py  aggregate.py  committee.py  creativity.py  hunger.py  job_fit.py  reliability.py  skill.py
meritengine/ingest/: __init__.py  ats_adapter.py  repo_analyzer.py  resume_parser.py  role_parser.py
meritengine/llm/: __init__.py
meritengine/mock_ats/: server.py
meritengine/mock_ats/ui/: index.html
meritengine/ui/: app.js  ats.html  ats.js  index.html  style.css
tests/: __init__.py  test_aggregate.py  test_committee.py  test_explain.py  test_ingest.py  test_models.py  test_pipeline.py  test_scorers.py  test_server.py  test_skill.py
tests/fixtures/: candidate_polished.json  candidate_promising.json  role_backend_senior.json
